--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=root
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hbm2ddl.auto= create-drop
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
